--- a/app/src/main/res/layout/activity_bank_america_buy_token_transaction_pend.xml
+++ b/app/src/main/res/layout/activity_bank_america_buy_token_transaction_pend.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".BankAmericaBuyTokenTransactionPend"
     android:orientation="vertical"
     android:padding="@dimen/_12sdp">
 
@@ -29,12 +30,13 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_16sdp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/_7sdp"
-                android:fontFamily="@font/opensans_bold"
+                android:fontFamily="@font/opensans_semibold"
                 android:gravity="center"
                 android:text="Transaction Pending"
+                android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
             <LinearLayout
@@ -46,8 +48,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_90sdp"
+                    android:fontFamily="@font/opensans_bold"
                     android:text="159.40"
-                    android:textColor="#151515"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/_35ssp"
 
                     />
@@ -64,8 +67,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_12sdp"
+                android:fontFamily="@font/opensans_regular"
                 android:gravity="center"
-                android:text="This total amount of [Amount] will appear on your \nbank statement as {description}."
+                android:paddingLeft="@dimen/_5sdp"
+                android:text="This total amount of [Amount] will appear on your\nbank statement as {description}."
+                android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
 
             <LinearLayout
@@ -78,79 +84,82 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Reference ID"
-                    android:textSize="@dimen/_11ssp"
                     android:fontFamily="@font/opensans_regular"
-                    />
+                    android:text="Reference ID"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="SND34239274DANN"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:textSize="@dimen/_11ssp"
-                    android:gravity="right"
                     android:layout_marginLeft="@dimen/_61sdp"
                     android:layout_weight="1"
-                    />
+                    android:fontFamily="@font/opensans_semibold"
+                    android:gravity="right"
+                    android:text="SND34239274DANN"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_11ssp" />
+
                 <ImageView
-                    android:layout_width="@dimen/_9sdp"
+                    android:layout_width="@dimen/_10sdp"
                     android:layout_height="@dimen/_11sdp"
-                    android:src="@drawable/ic_copy"
-                    android:layout_marginLeft="@dimen/_8sdp"
                     android:layout_gravity="center"
-                    />
+                    android:layout_marginLeft="@dimen/_8sdp"
+                    android:src="@drawable/ic_copy" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/_39sdp"
                 android:orientation="horizontal"
                 android:padding="@dimen/_10sdp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
                     android:text="Account Balance"
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="1,000.00 CYN"
                     android:layout_marginLeft="@dimen/_94sdp"
+                    android:layout_weight="1"
                     android:fontFamily="@font/opensans_semibold"
                     android:gravity="right"
-                    android:layout_weight="1"
-                    />
+                    android:text="1,000.00 CYN"
+                    android:textColor="@color/black" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/_10sdp"
-                    android:gravity="left"
                     android:fontFamily="@font/opensans_regular"
-                    android:text="We submitted  your request, please allow a 3-5 business days for your coyni purchase to be reflected in your token account."
+                    android:gravity="left"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:text="We submitted  your request, please allow a 3-5 \nbusiness days for your coyni purchase to be reflected in\nyour token account."
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_9ssp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:paddingLeft="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_33sdp"
                     android:fontFamily="@font/opensans_regular"
-                    android:textColor="@color/primary_color"
+                    android:gravity="left"
+                    android:paddingLeft="@dimen/_8sdp"
                     android:text="@string/learn_more1"
-                    android:textSize="@dimen/_9ssp"
-                   />
+                    android:textColor="@color/primary_color"
+                    android:textSize="@dimen/_9ssp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -167,7 +176,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="@dimen/_10sdp"
-                app:cardBackgroundColor="@color/primary_green"
+                app:cardBackgroundColor="#00a6a2"
                 app:cardCornerRadius="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_32sdp">
 
