--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -125,12 +125,12 @@
                                             android:textSize="@dimen/_11ssp" />
 
                                         <androidx.cardview.widget.CardView
-                                            android:layout_width="@dimen/_7sdp"
-                                            android:layout_height="@dimen/_7sdp"
+                                            android:layout_width="@dimen/_8sdp"
+                                            android:layout_height="@dimen/_8sdp"
                                             android:layout_marginStart="@dimen/_2sdp"
                                             android:layout_marginTop="7dp"
                                             app:cardBackgroundColor="#FFA70F"
-                                            app:cardCornerRadius="3.5dp" />
+                                            app:cardCornerRadius="@dimen/_4sdp" />
                                     </LinearLayout>
 
 
@@ -300,7 +300,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/cardviewYourAccount"
                 android:layout_marginStart="@dimen/_11sdp"
-                android:layout_marginTop="@dimen/_6sdp"
+                android:layout_marginTop="@dimen/_11sdp"
                 android:layout_marginEnd="@dimen/_11sdp"
                 android:background="@color/white"
                 app:cardCornerRadius="@dimen/_10sdp">
@@ -309,17 +309,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="14dp"
+                    android:background="@color/white"
                     android:orientation="vertical"
 
                     android:paddingStart="@dimen/_11sdp"
-                    android:paddingTop="@dimen/_11sdp"
-                    android:paddingEnd="@dimen/_11sdp">
+                    android:paddingTop="@dimen/_11sdp">
 
                     <LinearLayout
                         android:id="@+id/cpUserDetailsLL"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:background="@color/white"
                         android:paddingTop="@dimen/_16sdp"
                         android:paddingBottom="@dimen/_16sdp">
 
@@ -442,7 +443,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/cardviewSetting"
                 android:layout_marginStart="@dimen/_11sdp"
-                android:layout_marginTop="@dimen/_6sdp"
+                android:layout_marginTop="@dimen/_11sdp"
                 android:layout_marginEnd="@dimen/_11sdp"
                 android:background="@color/white"
                 app:cardCornerRadius="@dimen/_10sdp">
@@ -551,6 +552,7 @@
                 android:layout_below="@id/cardviewSetting"
                 android:layout_marginStart="@dimen/_11sdp"
                 android:layout_marginEnd="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_11sdp"
                 android:background="@color/white"
                 app:cardCornerRadius="@dimen/_10sdp">
 
@@ -688,8 +690,8 @@
                 android:layout_marginStart="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_36sdp"
                 android:layout_marginEnd="@dimen/_21sdp"
-                android:layout_marginBottom="28dp"
-                app:cardCornerRadius="21dp">
+                android:layout_marginBottom="@dimen/_100sdp"
+                app:cardCornerRadius="@dimen/_21sdp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -705,16 +707,6 @@
 
 
             </androidx.cardview.widget.CardView>
-
-            <View
-                android:id="@+id/viewSetupFaceBottom"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginBottom="20dp"
-                android:background="@color/primary_color"
-                android:visibility="gone" />
-
-
         </LinearLayout>
 
     </ScrollView>
