--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingStart="@dimen/_21sdp"
-    android:paddingEnd="@dimen/_21sdp"
     android:background="@color/white"
+    android:paddingEnd="@dimen/_21sdp"
     android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
     tools:context=".view.IdentityVerificationActivity">
 
@@ -184,7 +184,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
-                    android:hint="@string/ssnlast"
+                    android:hint="@string/digits4"
+                    android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:imeOptions="actionDone"
                     android:padding="@dimen/_14sdp"
@@ -213,7 +214,7 @@
                     app:layout_constraintHorizontal_bias="0.952"
                     app:layout_constraintStart_toStartOf="@+id/idveriDOBTIL"
                     app:layout_constraintTop_toTopOf="@+id/idveriDOBTIL"
-                    app:layout_constraintVertical_bias="0.507"
+                    app:layout_constraintVertical_bias="0.557"
                     app:layout_editor_absoluteX="336.24dp"
                     app:layout_editor_absoluteY="26.28dp" />
 
@@ -231,6 +232,7 @@
                     app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_color"
                     app:expandedHintEnabled="false"
+                    android:focusable="false"
                     app:hintTextColor="@color/primary_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -245,6 +247,7 @@
                         android:hint="@string/dobhint"
                         android:imeOptions="actionDone"
                         android:inputType="none"
+                        android:textColorHint="@color/light_gray"
                         android:maxLength="30"
                         android:padding="@dimen/_14sdp"
                         android:textColor="@color/black"
@@ -352,8 +355,8 @@
                     android:hint="@string/mailingaddresshint"
                     android:imeOptions="actionNext"
                     android:singleLine="true"
-                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ@+-,.0123456789/"
-                    android:inputType="textEmailAddress"
+                    android:textColorHint="@color/light_gray"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ@+-,.0123456789/_"
                     android:maxLength="255"
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:padding="@dimen/_12sdp"
@@ -383,12 +386,12 @@
                     android:id="@+id/mailingAddlineoptET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ@+-,.0123456789/"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ@+-,.0123456789/_"
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="@string/mailingaddresshint2"
                     android:imeOptions="actionNext"
                     android:singleLine="true"
-                    android:inputType="textEmailAddress"
+                    android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:maxLength="255"
                     android:padding="@dimen/_12sdp"
@@ -421,6 +424,7 @@
                     android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="@string/cityhint"
+                    android:textColorHint="@color/light_gray"
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:maxLength="30"
@@ -480,6 +484,7 @@
                         android:imeOptions="actionDone"
                         android:inputType="text"
                         android:maxLength="30"
+                        android:textColorHint="@color/light_gray"
                         android:textCursorDrawable="@drawable/cursor_color"
                         android:padding="@dimen/_12sdp"
                         android:textColor="@color/black"
@@ -515,6 +520,7 @@
                     android:imeOptions="actionDone"
                     android:inputType="number"
                     android:maxLength="10"
+                    android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:padding="@dimen/_12sdp"
                     android:textColor="@color/black"
@@ -550,6 +556,7 @@
                     android:clickable="false"
                     android:focusable="false"
                     android:editable="false"
+                    android:textColorHint="@color/light_gray"
                     android:enabled="false"
                     android:padding="@dimen/_12sdp"
                     android:textColor="@color/black"
