--- a/app/src/main/res/layout/fragment_id_ve_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_id_ve_bottom_sheet.xml
@@ -15,7 +15,7 @@
         android:paddingBottom="30dp">
 
         <View
-            android:layout_width="@dimen/_80sdp"
+            android:layout_width="@dimen/_55sdp"
             android:layout_height="@dimen/_3sdp"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_15sdp"
@@ -147,10 +147,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="32dp"
+        android:paddingLeft="@dimen/_21sdp"
 
-        android:paddingRight="32dp"
-        android:paddingBottom="20dp">
+        android:paddingRight="@dimen/_21sdp"
+        android:paddingBottom="@dimen/_20sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -169,7 +169,7 @@
                 android:id="@+id/sictxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_21sdp"
+                android:layout_marginLeft="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_4sdp"
                 android:layout_weight="1"
                 android:fontFamily="@font/opensans_semibold"
@@ -192,8 +192,8 @@
     <View
         android:layout_width="wrap_content"
         android:layout_height="1.4dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginLeft="@dimen/_21sdp"
+        android:layout_marginRight="@dimen/_21sdp"
 
         android:background="@color/viewcolor" />
 
