Dashboard and icon changes

--- a/app/src/main/res/drawable/ic_token_active.xml
+++ b/app/src/main/res/drawable/ic_token_active.xml
@@ -4,12 +4,14 @@
     android:viewportWidth="30.386"
     android:viewportHeight="30.385">
   <path
-      android:pathData="M15.193,0a15.193,15.193 0,1 0,15.193 15.193A15.193,15.193 0,0 0,15.193 0ZM15.193,28.6A13.405,13.405 0,1 1,28.6 15.193,13.405 13.405,0 0,1 15.193,28.6Z"
+      android:pathData="M15.193,0a15.193,15.193 0,1 0,15.193 15.193A15.193,15.193 0,0 0,15.193 0zM15.193,28.6a13.405,13.405 0,1 1,13.407 -13.407,13.405 13.405,0 0,1 -13.407,13.407z"
       android:fillColor="#00a6a2"/>
   <path
-      android:pathData="M20.461,11.169a4.024,4.024 0,1 1,-4.024 4.024,4.024 4.024,0 0,1 4.024,-4.024m0,-1.648A5.674,5.674 0,0 0,14.951 13.848a1,1 0,0 1,-0.977 0.768L12.451,14.616a0.98,0.98 0,0 1,-0.852 -0.471,1.972 1.972,0 1,0 0,2.095 0.98,0.98 0,0 1,0.852 -0.471h1.526a1,1 0,0 1,0.977 0.768,5.672 5.672,0 1,0 5.511,-7.016Z"
-      android:fillColor="#00a6a2"/>
+      android:pathData="M20.461,11.169a4.024,4.024 0,1 1,-4.024 4.024,4.024 4.024,0 0,1 4.024,-4.024m0,-1.648a5.674,5.674 0,0 0,-5.51 4.327,1 1,0 0,1 -0.977,0.768L12.451,14.616a0.98,0.98 0,0 1,-0.852 -0.471,1.972 1.972,0 1,0 0,2.095 0.98,0.98 0,0 1,0.852 -0.471h1.526a1,1 0,0 1,0.977 0.768,5.672 5.672,0 1,0 5.511,-7.016z"
+      android:fillColor="#00a6a2"
+      android:fillType="evenOdd"/>
   <path
       android:pathData="M5.9,15.193a4.029,4.029 0,0 1,6.8 -2.915l1.166,-1.166a5.672,5.672 0,1 0,0 8.161l-1.166,-1.166a4.029,4.029 0,0 1,-6.8 -2.915"
-      android:fillColor="#00a6a2"/>
+      android:fillColor="#00a6a2"
+      android:fillType="evenOdd"/>
 </vector>
