--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -28,9 +28,9 @@
                 android:id="@+id/layoutPrPic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="?attr/actionBarSize"
-                android:orientation="horizontal"
-                android:layout_marginLeft="30dp">
+                android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cvProfile"
@@ -88,12 +88,12 @@
                     android:id="@+id/tvUserName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="15dp"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="Hi! [Name Selected]"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/_12ssp"></TextView>
+                    android:textSize="@dimen/_11ssp"></TextView>
             </LinearLayout>
 
             <ImageView
@@ -105,15 +105,67 @@
                 android:src="@drawable/ic_notifications"></ImageView>
 
             <TextView
+                android:id="@+id/tvBalHead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/layoutPrPic"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="Available Balance"
                 android:textColor="@color/text_color"
                 android:textSize="@dimen/_12ssp"></TextView>
+
+            <TextView
+                android:id="@+id/tvBalance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvBalHead"
+                android:layout_marginLeft="19dp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:text="19,999.00"
+                android:textColor="@color/price"
+                android:textSize="@dimen/_30ssp"></TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvBalHead"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_25sdp"
+                android:layout_toRightOf="@+id/tvBalance"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="CYN"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_14ssp"></TextView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvBalance"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginRight="@dimen/_23sdp"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="@dimen/_145sdp"
+                    android:layout_height="@dimen/_32sdp"
+                    app:cardBackgroundColor="@color/primary_green"
+                    app:cardCornerRadius="@dimen/_16sdp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/opensans_bold"
+                        android:text="Pay/Request"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_12ssp"></TextView>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -143,8 +195,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_2sdp"
                 android:fontFamily="@font/opensans_regular"
-                android:text="Token"
-                android:textColor="@color/primary_green"></TextView>
+                android:text="Dashboard"
+                android:textColor="@color/primary_green"
+                android:textSize="@dimen/_8ssp"></TextView>
         </LinearLayout>
 
         <LinearLayout
@@ -165,7 +218,8 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="Crypto"
-                android:textColor="@color/light_gray"></TextView>
+                android:textColor="@color/light_gray"
+                android:textSize="@dimen/_8ssp"></TextView>
         </LinearLayout>
 
         <LinearLayout
@@ -201,7 +255,8 @@
                 android:fontFamily="@font/opensans_regular"
                 android:gravity="center"
                 android:text="Issue\nCard"
-                android:textColor="@color/light_gray"></TextView>
+                android:textColor="@color/light_gray"
+                android:textSize="@dimen/_8ssp"></TextView>
         </LinearLayout>
 
         <LinearLayout
@@ -223,7 +278,8 @@
                 android:layout_marginTop="@dimen/_3sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="Profile"
-                android:textColor="@color/light_gray"></TextView>
+                android:textColor="@color/light_gray"
+                android:textSize="@dimen/_8ssp"></TextView>
         </LinearLayout>
 
     </LinearLayout>
