--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -6,39 +6,38 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="@dimen/_21sdp"
         android:paddingRight="@dimen/_21sdp">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_45sdp"
             android:layout_marginBottom="@dimen/_14sdp"
-            android:src="@drawable/ic_x"
             android:background="@color/white"
-            />
+            android:src="@drawable/ic_x" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_32sdp"
-            android:text="Buy Token"
-            android:textSize="@dimen/_16ssp"
             android:fontFamily="@font/opensans_bold"
-            />
+            android:text="Buy Token"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_16sdp"
-            android:text="Payment Method"
-            android:textSize="@dimen/_12ssp"
             android:fontFamily="@font/opensans_semibold"
-            />
+            android:text="Payment Method"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -48,30 +47,29 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/_16sdp"
+                android:paddingBottom="@dimen/_16sdp"
                 android:src="@drawable/ic__01_bank" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
-                android:text="Bank of America"
-                android:fontFamily="@font/opensans_semibold"
                 android:layout_weight="1"
-                />
+                android:paddingTop="@dimen/_16sdp"
+                android:paddingBottom="@dimen/_16sdp"
+                android:textColor="@color/primary_black"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="Bank of America  ••••5359" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="••••5359"
-                android:fontFamily="@font/opensans_semibold"
-                android:layout_weight="1"
-                />
 
             <ImageView
-                android:layout_width="@dimen/_5sdp"
-                android:layout_height="@dimen/_10sdp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_60sdp"
                 android:layout_marginTop="@dimen/_5sdp"
+                android:paddingTop="@dimen/_16sdp"
+                android:paddingBottom="@dimen/_16sdp"
                 android:src="@drawable/ic_chevron_right" />
         </LinearLayout>
 
@@ -79,8 +77,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_7sdp"
-            android:orientation="horizontal"
             android:background="@color/white"
+            android:orientation="horizontal"
             >
 
             <TextView
@@ -88,35 +86,38 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/_67sdp"
-                android:gravity="center"
-                android:text="$"
-                android:paddingTop="@dimen/_9sdp"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_40ssp"
                 android:fontFamily="@font/opensans_bold"
+                android:gravity="center"
+                android:paddingTop="@dimen/_9sdp"
                 android:paddingBottom="@dimen/_7sdp"
-                />
+                android:text="$"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_40ssp" />
 
-            <TextView
+            <EditText
+                android:id="@+id/inputEV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="0.00"
-                android:textColor="@color/light_gray"
-                android:textSize="@dimen/_53ssp"
                 android:fontFamily="@font/opensans_bold"
+                android:hint="0.00"
+                android:inputType="number"
+                android:background="@color/white"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_53ssp"
                 />
+
             <View
                 android:layout_width="@dimen/_1sdp"
                 android:layout_height="@dimen/_42sdp"
-                android:background="@color/light_gray"
-                android:layout_marginLeft="@dimen/_5sdp"
                 android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:background="@color/light_gray"
 
                 />
 
             <ImageView
-                android:layout_width="@dimen/_20sdp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/_7sdp"
@@ -133,12 +134,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_2sdp"
                 android:layout_gravity="center"
-                android:background="@color/inactive_color"
-                />
+                android:background="#d8e2f0" />
         </LinearLayout>
 
     </LinearLayout>
-
 
     <com.greenbox.coyni.utils.keyboards.CustomKeyboard
         android:id="@+id/ckb"
