--- a/app/src/main/res/layout/activity_visa_card_transaction_in_progress.xml
+++ b/app/src/main/res/layout/activity_visa_card_transaction_in_progress.xml
@@ -6,156 +6,182 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/_12sdp">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_in_progress_icon"
-        android:layout_marginBottom="@dimen/_23sdp"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_20sdp"
-
-        />
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Transaction in Progress"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:fontFamily="@font/opensans_semibold"
-        android:textSize="@dimen/_12ssp"
-        android:layout_marginBottom="@dimen/_7sdp"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="159.40"
-            android:textSize="@dimen/_35ssp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/opensans_bold"
-            android:layout_marginLeft="@dimen/_90sdp"
-
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CYN"
-            android:textSize="@dimen/_11sdp"
-            android:fontFamily="@font/opensans_semibold"
-            android:textColor="@color/black"
-            />
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="This total amount of [Amount] will appear on your \nbank statement as {description}."
-        android:textSize="@dimen/_11ssp"
-        android:gravity="center"
-        android:fontFamily="@font/opensans_regular"
-        android:layout_marginTop="@dimen/_12sdp"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_30sdp"
+        android:scrollbars="none"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Reference ID"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
-
-            />
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SND34239274DANN"
-            android:fontFamily="@font/opensans_semibold"
-            android:textSize="@dimen/_11ssp"
-            android:gravity="right"
-            android:layout_marginLeft="@dimen/_61sdp"
-            android:layout_weight="1"
-            />
-        <ImageView
-            android:layout_width="@dimen/_9sdp"
-            android:layout_height="@dimen/_11sdp"
-            android:src="@drawable/ic_copy"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:layout_gravity="center"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="@dimen/_10sdp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Account Balance"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_in_progress_icon"
+                    android:layout_marginBottom="@dimen/_23sdp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_77sdp"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Transaction in Progress"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:textSize="@dimen/_12ssp"
+                    android:textColor="@color/primary_black"
+                    android:layout_marginBottom="@dimen/_7sdp"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="159.40"
+                        android:textSize="@dimen/_35ssp"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/opensans_bold"
+                        android:layout_marginLeft="@dimen/_90sdp"
 
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1,000.00 CYN"
-            android:layout_marginLeft="@dimen/_94sdp"
-            android:fontFamily="@font/opensans_semibold"
-            android:gravity="right"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_30sdp"
-        android:text="We are processing your request, please allow a few \nminutes for your coyni debit/credit card purchase to be \nreflected in your token account."
-        android:textSize="@dimen/_10sdp"
-        android:gravity="center"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/learn"
-        android:textSize="@dimen/_10sdp"
-        android:textColor="@color/teal_200"
-        android:gravity="center"
-        android:layout_marginBottom="@dimen/_33sdp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="CYN"
+                        android:textSize="@dimen/_11sdp"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:textColor="#151515"
+                        />
+                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="This total amount of [Amount] will appear on your \nbank statement as {description}."
+                    android:textSize="@dimen/_11ssp"
+                    android:gravity="center"
+                    android:textColor="@color/primary_black"
+                    android:fontFamily="@font/opensans_regular"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_30sdp"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Reference ID"
+                        android:textSize="@dimen/_11ssp"
+                        android:textColor="@color/primary_black"
+                        android:fontFamily="@font/opensans_regular"
 
-        />
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="SND34239274DANN"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:textSize="@dimen/_11ssp"
+                        android:gravity="right"
+                        android:textColor="@color/black"
+                        android:layout_marginLeft="@dimen/_61sdp"
+                        android:layout_weight="1"
+                        />
+                    <ImageView
+                        android:layout_width="@dimen/_9sdp"
+                        android:layout_height="@dimen/_11sdp"
+                        android:src="@drawable/ic_copy"
+                        android:layout_marginLeft="@dimen/_8sdp"
+                        android:layout_gravity="center"
+                        />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_10sdp"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Account Balance"
+                        android:textSize="@dimen/_11ssp"
+                        android:textColor="@color/primary_black"
+                        android:fontFamily="@font/opensans_regular"
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/nextCV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/primary_green"
-        android:gravity="center"
-        app:cardCornerRadius="@dimen/_20sdp"
-        android:layout_marginLeft="@dimen/_21sdp"
-        android:layout_marginRight="@dimen/_21sdp"
-        android:paddingTop="@dimen/_30sdp"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Done"
-            android:fontFamily="@font/opensans_bold"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:paddingTop="@dimen/_13sdp"
-            android:paddingBottom="@dimen/_13sdp"
-            />
-    </androidx.cardview.widget.CardView>
-
-
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="1,000.00 CYN"
+                        android:layout_marginLeft="@dimen/_94sdp"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:gravity="right"
+                        android:textColor="@color/black"
+                        android:layout_weight="1"
+                        />
+                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_30sdp"
+                    android:text="We are processing your request, please allow a few \nminutes for your coyni debit/credit card purchase to be \nreflected in your token account."
+                    android:textSize="@dimen/_10sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:textColor="@color/primary_black"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:gravity="left"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/learn"
+                    android:textSize="@dimen/_10sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:textColor="@color/teal_200"
+                    android:gravity="left"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/nextCV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="#00a6a2"
+                    android:gravity="center"
+                    app:cardCornerRadius="@dimen/_20sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_33sdp"
+                    >
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Done"
+                        android:fontFamily="@font/opensans_bold"
+                        android:textColor="@color/white"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:paddingTop="@dimen/_13sdp"
+                        android:paddingBottom="@dimen/_13sdp"
+                        />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
