--- a/app/src/main/res/drawable/ic_profilelogo.xml
+++ b/app/src/main/res/drawable/ic_profilelogo.xml
@@ -1,18 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="74dp"
-    android:height="74dp"
-    android:viewportWidth="74"
-    android:viewportHeight="74">
+    android:width="41dp"
+    android:height="41dp"
+    android:viewportWidth="41"
+    android:viewportHeight="41">
   <path
-      android:pathData="M37,37m-37,0a37,37 0,1 1,74 0a37,37 0,1 1,-74 0"
+      android:pathData="M20.5,20.5m-20.5,0a20.5,20.5 0,1 1,41 0a20.5,20.5 0,1 1,-41 0"
       android:fillColor="#f2f5f8"/>
   <path
-      android:pathData="M36.82,58.803A21.584,21.584 0,1 1,53.326 51.131a21.813,21.813 0,0 1,-2.547 2.554,21.593 21.593,0 0,1 -13.958,5.12ZM36.82,18.329A18.889,18.889 0,0 0,22.377 49.39a19.109,19.109 0,0 0,2.23 2.236A18.89,18.89 0,0 0,49.034 51.631a19.108,19.108 0,0 0,2.231 -2.237A18.889,18.889 0,0 0,36.82 18.331Z"
+      android:pathData="M20.401,32.58a11.959,11.959 0,1 1,9.14 -4.252,12.086 12.086,0 0,1 -1.411,1.415 11.963,11.963 0,0 1,-7.729 2.837zM20.401,10.155a10.466,10.466 0,0 0,-8 17.209,10.587 10.587,0 0,0 1.236,1.239 10.466,10.466 0,0 0,13.533 0,10.587 10.587,0 0,0 1.234,-1.243 10.466,10.466 0,0 0,-8 -17.209z"
       android:fillColor="#00a6a2"/>
   <path
-      android:pathData="M36.82,37.218a8.095,8.095 0,1 1,8.095 -8.095A8.1,8.1 0,0 1,36.82 37.218ZM36.82,23.727a5.4,5.4 0,1 0,5.4 5.4A5.4,5.4 0,0 0,36.82 23.728Z"
+      android:pathData="M20.401,20.62a4.485,4.485 0,1 1,4.485 -4.485,4.49 4.49,0 0,1 -4.485,4.485zM20.401,13.145a2.99,2.99 0,1 0,2.99 2.99,2.993 2.993,0 0,0 -2.99,-2.99z"
       android:fillColor="#00a6a2"/>
   <path
-      android:pathData="M49.907,54.004a1.35,1.35 0,0 1,-1.31 -1.678,12.153 12.153,0 0,0 -11.6,-15.108h-0.355a12.153,12.153 0,0 0,-11.6 15.108,1.349 1.349,0 1,1 -2.617,0.657A14.845,14.845 0,0 1,36.61 34.519h0.421a14.852,14.852 0,0 1,14.184 18.463A1.35,1.35 0,0 1,49.907 54.004Z"
+      android:pathData="M27.651,29.925a0.748,0.748 0,0 1,-0.726 -0.93,6.734 6.734,0 0,0 -6.427,-8.371h-0.2a6.734,6.734 0,0 0,-6.427 8.371,0.747 0.747,0 0,1 -1.45,0.364A8.225,8.225 0,0 1,20.284 19.125h0.233a8.229,8.229 0,0 1,7.861 10.23,0.748 0.748,0 0,1 -0.727,0.57z"
       android:fillColor="#00a6a2"/>
 </vector>
