--- a/app/src/main/res/layout/activity_account_type.xml
+++ b/app/src/main/res/layout/activity_account_type.xml
@@ -14,10 +14,30 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/bg_account_type" />
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/layoutClose"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="@dimen/_21sdp"
+                android:layout_marginTop="?attr/actionBarSize"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imgClose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_close" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/bg_account_type" />
+        </RelativeLayout>
 
         <ImageView
             android:layout_width="@dimen/_116sdp"
