--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -17,7 +17,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:layout_height="@dimen/_229sdp">
 
             <View
                 android:layout_width="match_parent"
@@ -147,8 +147,7 @@
                 android:layout_marginLeft="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:layout_marginRight="@dimen/_23sdp"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="@dimen/_145sdp"
@@ -165,6 +164,22 @@
                         android:textColor="@color/white"
                         android:textSize="@dimen/_12ssp"></TextView>
                 </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="@dimen/_71sdp"
+                    android:layout_height="@dimen/_32sdp"
+                    android:layout_marginLeft="@dimen/_24sdp"
+                    android:background="@drawable/scanroundedborder"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_scan"
+                        app:tint="@color/primary_green"></ImageView>
+                </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
@@ -174,6 +189,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/menuborder"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingTop="@dimen/_9sdp"
         android:paddingBottom="@dimen/_25sdp">
@@ -193,7 +209,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="Dashboard"
                 android:textColor="@color/primary_green"
