--- a/app/src/main/res/layout/retrieve_email_foundaccount_layout.xml
+++ b/app/src/main/res/layout/retrieve_email_foundaccount_layout.xml
@@ -63,15 +63,16 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_10sdp"
             android:src="@drawable/ic_profilelogo" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:paddingLeft="@dimen/_20sdp"
             android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/_20sdp">
 
             <TextView
                 android:layout_width="match_parent"
