Change Request in PIN Activity

--- a/app/src/main/res/layout/activity_pin_keyboard.xml
+++ b/app/src/main/res/layout/activity_pin_keyboard.xml
@@ -37,6 +37,7 @@
             android:textSize="@dimen/_16ssp" />
 
         <LinearLayout
+            android:id="@+id/pinLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
