New Login flow and Password eye icon change

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -78,11 +78,12 @@
                         android:hint="@string/new_password"
                         android:textColorHint="@color/primary_black"
                         app:boxStrokeColor="@color/primary_green"
+                        app:endIconDrawable="@drawable/ic_eyeclose"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/xdark_gray"
                         app:errorIconDrawable="@null"
                         app:expandedHintEnabled="false"
-                        app:hintTextColor="@color/primary_green"
-                        app:passwordToggleEnabled="true"
-                        app:passwordToggleTint="@color/xdark_gray">
+                        app:hintTextColor="@color/primary_green">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/etPassword"
@@ -94,11 +95,11 @@
                             android:inputType="textPassword"
                             android:maxLength="12"
                             android:padding="@dimen/_14sdp"
+                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
-                            android:textSize="@dimen/_12ssp"
-                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -165,11 +166,12 @@
                     app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                     app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_green"
+                    app:endIconDrawable="@drawable/ic_eyeclose"
+                    app:endIconMode="custom"
+                    app:endIconTint="@color/xdark_gray"
                     app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/primary_green"
-                    app:passwordToggleEnabled="true"
-                    app:passwordToggleTint="@color/xdark_gray">
+                    app:hintTextColor="@color/primary_green">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etCPassword"
@@ -181,9 +183,9 @@
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
                         android:maxLength="12"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                         android:textColor="@color/text_color"
-                        android:textSize="@dimen/_12ssp"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"/>
+                        android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
