--- a/app/src/main/res/drawable/ic_issue_card_inactive.xml
+++ b/app/src/main/res/drawable/ic_issue_card_inactive.xml
@@ -1,21 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="34.879dp"
-    android:height="25.367dp"
-    android:viewportWidth="34.879"
-    android:viewportHeight="25.367">
+    android:width="32.879dp"
+    android:height="23.367dp"
+    android:viewportWidth="32.879"
+    android:viewportHeight="23.367">
   <path
-      android:pathData="M3.171,1.5A1.673,1.673 0,0 0,1.5 3.171L1.5,22.2a1.673,1.673 0,0 0,1.671 1.671L31.708,23.871A1.673,1.673 0,0 0,33.379 22.2L33.379,3.171A1.673,1.673 0,0 0,31.708 1.5L3.171,1.5m0,-1.5L31.708,0a3.171,3.171 0,0 1,3.171 3.171L34.879,22.2a3.171,3.171 0,0 1,-3.171 3.171L3.171,25.371A3.171,3.171 0,0 1,0 22.2L0,3.171A3.171,3.171 0,0 1,3.171 0Z"
+      android:pathData="M2.989,1.382a1.559,1.559 0,0 0,-1.575 1.539v17.525a1.559,1.559 0,0 0,1.575 1.539h26.9a1.559,1.559 0,0 0,1.575 -1.539L31.464,2.921a1.559,1.559 0,0 0,-1.574 -1.539L2.989,1.382m0,-1.382h26.9a2.956,2.956 0,0 1,2.989 2.921v17.525a2.956,2.956 0,0 1,-2.989 2.921h-26.9A2.956,2.956 0,0 1,0 20.446L0,2.921A2.956,2.956 0,0 1,2.989 0z"
       android:fillColor="#767676"/>
   <path
-      android:pathData="M33.997,10.263L1.812,10.263a0.75,0.75 0,1 1,0 -1.5L33.997,8.763a0.75,0.75 0,0 1,0 1.5Z"
+      android:pathData="M32.041,9.528L1.767,9.528a0.751,0.751 0,0 1,0 -1.5h30.274a0.751,0.751 0,0 1,0 1.5z"
       android:fillColor="#767676"/>
   <path
-      android:pathData="M17.612,15.843L4.186,15.843a0.75,0.75 0,0 1,0 -1.5L17.612,14.343a0.75,0.75 0,1 1,0 1.5Z"
+      android:pathData="M17.612,14.641L4.186,14.641a0.75,0.75 0,0 1,0 -1.5h13.426a0.75,0.75 0,1 1,0 1.5z"
       android:fillColor="#767676"/>
   <path
-      android:pathData="M8.327,20.028L4.186,20.028a0.75,0.75 0,1 1,0 -1.5L8.327,18.528a0.75,0.75 0,0 1,0 1.5Z"
+      android:pathData="M8.327,18.476L4.186,18.476a0.75,0.75 0,1 1,0 -1.5h4.141a0.75,0.75 0,0 1,0 1.5z"
       android:fillColor="#767676"/>
   <path
-      android:pathData="M26.699,14.836L26.699,17.617L30.676,17.617L30.676,14.836L26.699,14.836M26.699,13.836L30.676,13.836a1,1 0,0 1,1 1L31.676,17.617a1,1 0,0 1,-1 1L26.699,18.617a1,1 0,0 1,-1 -1L25.699,14.836A1,1 0,0 1,26.699 13.836Z"
+      android:pathData="M24.699,13.492v2.781h3.977L28.676,13.492L24.699,13.492m0,-1h3.977a1,1 0,0 1,1 1v2.781a1,1 0,0 1,-1 1L24.699,17.273a1,1 0,0 1,-1 -1L23.699,13.492a1,1 0,0 1,1 -1z"
       android:fillColor="#767676"/>
 </vector>
