--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -2,39 +2,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainRL"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:fillViewport="true"
     android:orientation="vertical"
     android:paddingLeft="22dp"
     android:paddingTop="22dp"
     android:paddingRight="22dp"
-    android:fillViewport="true"
     android:screenReaderFocusable="true"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
-    tools:context=".view.CreateAccountActivity"
-    android:id="@+id/mainRL">
+    tools:context=".view.CreateAccountActivity">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        >
+        android:fitsSystemWindows="true">
+
         <LinearLayout
             android:id="@+id/layoutClose"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_marginTop="@dimen/_40sdp"
-            android:orientation="vertical"
-            android:layout_alignParentTop="true">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/createAccountCloseIV"
                 android:layout_width="@dimen/_13sdp"
                 android:layout_height="@dimen/_13sdp"
-                android:src="@drawable/ic_x"
-                android:layout_marginBottom="@dimen/_14sdp"/>
+                android:layout_marginBottom="@dimen/_14sdp"
+                android:src="@drawable/ic_x" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -49,9 +49,9 @@
             android:id="@+id/mainSV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="none"
+            android:layout_below="@id/layoutClose"
             android:layout_alignParentBottom="true"
-            android:layout_below="@id/layoutClose">
+            android:scrollbars="none">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -67,9 +67,9 @@
                     android:hint="First Name"
                     android:textColorHint="@color/black"
                     app:boxStrokeColor="@color/primary_green"
+                    app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/primary_green"
-                    app:errorIconDrawable="@null">
+                    app:hintTextColor="@color/primary_green">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/firstNameET"
@@ -83,13 +83,13 @@
                         android:maxLength="30"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                        android:singleLine="true"
                         android:textColor="@color/text_color"
                         android:textColorHint="@color/light_gray"
                         android:textCursorDrawable="@drawable/cursor_color"
-                        android:textSize="@dimen/_12ssp"
                         android:textIsSelectable="false"
-                        android:singleLine="true"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"/>
+                        android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -118,6 +118,7 @@
                 </LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/lastNameTIL"
                     style="@style/TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -125,10 +126,9 @@
                     android:hint="Last Name"
                     android:textColorHint="@color/black"
                     app:boxStrokeColor="@color/primary_green"
+                    app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/primary_green"
-                    android:id="@+id/lastNameTIL"
-                    app:errorIconDrawable="@null">
+                    app:hintTextColor="@color/primary_green">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/lastNameET"
@@ -142,12 +142,12 @@
                         android:maxLength="30"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                        android:singleLine="true"
                         android:textColor="@color/text_color"
                         android:textColorHint="@color/light_gray"
                         android:textCursorDrawable="@drawable/cursor_color"
-                        android:textSize="@dimen/_12ssp"
-                        android:singleLine="true"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"/>
+                        android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -184,28 +184,28 @@
                     android:hint="Email"
                     android:textColorHint="@color/black"
                     app:boxStrokeColor="@color/primary_green"
+                    app:errorIconDrawable="@null"
                     app:errorTextColor="@color/error_red"
                     app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/primary_green"
-                    app:errorIconDrawable="@null">
+                    app:hintTextColor="@color/primary_green">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/emailET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Email"
                         android:imeOptions="actionNext"
                         android:inputType="textEmailAddress|textNoSuggestions"
+                        android:maxLines="1"
                         android:padding="@dimen/_14sdp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                        android:singleLine="true"
                         android:textColor="@color/text_color"
                         android:textColorHint="@color/light_gray"
                         android:textCursorDrawable="@drawable/cursor_color"
-                        android:textSize="@dimen/_12ssp"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."/>
+                        android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -272,38 +272,38 @@
                     android:layout_marginTop="@dimen/_14sdp">
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/passwordTIL"
                         style="@style/TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Password"
                         android:textColorHint="@color/black"
                         app:boxStrokeColor="@color/primary_green"
+                        app:endIconDrawable="@drawable/ic_eyeclose"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/xdark_gray"
+                        app:errorIconDrawable="@null"
                         app:expandedHintEnabled="false"
-                        app:hintTextColor="@color/primary_green"
-                        app:passwordToggleEnabled="true"
-                        app:passwordToggleTint="@color/xdark_gray"
-                        android:id="@+id/passwordTIL"
-                        app:errorIconDrawable="@null">
+                        app:hintTextColor="@color/primary_green">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/passwordET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/"
                             android:fontFamily="@font/opensans_semibold"
                             android:hint="8-12 Characters"
                             android:imeOptions="actionNext"
                             android:inputType="textPassword|textNoSuggestions"
+                            android:longClickable="false"
                             android:maxLength="12"
                             android:padding="@dimen/_14sdp"
+                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                            android:singleLine="true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
-                            android:textSize="@dimen/_12ssp"
-                            android:longClickable="false"
-                            android:singleLine="true"
-                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/"
-                            />
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -381,6 +381,7 @@
                     android:textSize="@dimen/_10ssp" />
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/confPasswordTIL"
                     style="@style/TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -388,31 +389,31 @@
                     android:hint="Confirm Password"
                     android:textColorHint="@color/black"
                     app:boxStrokeColor="@color/primary_green"
+                    app:endIconDrawable="@drawable/ic_eyeclose"
+                    app:endIconMode="custom"
+                    app:errorIconDrawable="@null"
+                    app:endIconTint="@color/xdark_gray"
                     app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/primary_green"
-                    app:passwordToggleEnabled="true"
-                    android:id="@+id/confPasswordTIL"
-                    app:passwordToggleTint="@color/xdark_gray"
-                    app:errorIconDrawable="@null">
+                    app:hintTextColor="@color/primary_green">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/confirmPasswordET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/"
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Confirm Password"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword|textNoSuggestions"
+                        android:longClickable="false"
                         android:maxLength="12"
                         android:padding="@dimen/_14sdp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                        android:singleLine="true"
                         android:textColor="@color/text_color"
                         android:textColorHint="@color/light_gray"
                         android:textCursorDrawable="@drawable/cursor_color"
-                        android:textSize="@dimen/_12ssp"
-                        android:longClickable="false"
-                        android:singleLine="true"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/"/>
+                        android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -445,11 +446,11 @@
                     android:id="@+id/spannableTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_14sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:text="@string/spannable_text"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp"
-                    android:layout_marginTop="@dimen/_14sdp"/>
+                    android:textSize="@dimen/_11ssp" />
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/nextCV"
